--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">District</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -32,8 +32,8 @@
   </div>
 </nav>
   <div class="jumbotron">
-  <h1 class="display-3">Hello, world!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <h1 class="display-3">District, Safeguard your data anywhere.</h1>
+  <p class="lead">A mobile, location-based security solution to automatically enforce organizational policies and safeguard proprietary and sensitive information.</p>
   <hr class="my-4">
   <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
   <p class="lead">
@@ -44,8 +44,8 @@
   <div class="card">
     <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Card title that wraps to a new line</h4>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <h4 class="card-title">About District</h4>
+      <p class="card-text">District is a location-based security solution that minimizes risk to your data and your organization by enabling you to implement security measures at a centralized, not end-user, level. The result is uniform, consistent protection for your system security throughout your organization. District helps your mobile workforce safely get their work done wherever they need to be.</p>
     </div>
   </div>
   <div class="card p-3">
