--- a/index.html
+++ b/index.html
@@ -35,14 +35,12 @@
   <h1 class="display-3">District, Safeguard your data anywhere.</h1>
   <p class="lead">A mobile, location-based security solution to automatically enforce organizational policies and safeguard proprietary and sensitive information.</p>
   <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
   </p>
 </div>
 <div class="card-columns">
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">About District</h4>
       <p class="card-text">District is a location-based security solution that minimizes risk to your data and your organization by enabling you to implement security measures at a centralized, not end-user, level. The result is uniform, consistent protection for your system security throughout your organization. District helps your mobile workforce safely get their work done wherever they need to be.</p>
@@ -50,19 +48,23 @@
   </div>
   <div class="card p-3">
     <blockquote class="blockquote mb-0 card-body">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+      <p>District helped me feel so much more secure about traveling with my government issued device.</p>
       <footer class="blockquote-footer">
         <small class="text-muted">
-          Someone famous in <cite title="Source Title">Source Title</cite>
+        John Doe <cite title="Source Title">from Chicago</cite>
         </small>
       </footer>
     </blockquote>
   </div>
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Card title</h4>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <h4 class="card-title">Features</h4>
+      <p class="card-text"><ul>
+        <li>Multilayer encryption to protect sensitive data</li>
+        <li>Anti-tampering measures to prevent physical hacking</li>
+        <li>Manage access to multiple operating systems on one device, including permissions for specific hardware and software</li>
+        <li>Track assets within the district using integrated RFID technology, including alerts customized for multiple layers of security personnel and types of assets</li>
+      </ul></p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
