--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <div id="mc_embed_signup">
 <form action="https://lezlinkapp.us11.list-manage.com/subscribe/post?u=8e60ed6057c40e709c0893a9b&amp;id=cc374273f2" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-    <h2>Subscribe to our mailing list</h2>
+    <h2>Sign Up for Updates!</h2>
 <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 <div class="mc-field-group">
     <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
@@ -133,7 +133,7 @@
 </div>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
-  
+
   </div>
   <div class="card">
     <div class="card-body">
