--- a/index.html
+++ b/index.html
@@ -137,13 +137,22 @@
   </div>
   <div class="card">
     <div class="card-body">
-      <h4 class="card-title">Card title</h4>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <h4 class="card-title">Benefits</h4>
+      <p class="card-text">
+        <ul>
+          <li>As mobile becomes a part of the enterprise, District gives administrators the ability to understand risk exposure and enforce end user policies automatically</li>
+          <li>Policies that rely on end users to enact can leave your network and sensitive data open to attack; by automating enforcement of security policies District: minimizes the risk of accidental data leaks</li>
+          <li>District: expands the flexibility of your workforce by providing the tools and data your users need where they need them</li></p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
 </div>
 
+<div id="container">
+
+  <div id="body"></div>
+   <div id="footer"></div>
+</div>
 </body>
 
 </html>
