--- a/index.html
+++ b/index.html
@@ -81,7 +81,12 @@
   </div> -->
   <div class="card text-center">
     <div class="card-body">
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text">District changed the way I view my clients information. It helped make my clients feel more secure as well!</p>
+      <footer class="blockquote-footer">
+      <small>
+        Annie Lee <cite title="Source Title">from Boston</cite>
+      </small>
+    </footer>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
